syntax = "proto3";

package strims.transfer.v1;

option go_package = "github.com/MemeLabs/go-ppspp/pkg/apis/transfer/v1;transfer";
option java_package = "gg.strims.transfer.v1";
option swift_prefix = "STX";

message TransferPeerAnnounceRequest {
  bytes id = 1;
  uint64 channel = 2;
}

message TransferPeerAnnounceResponse {
  oneof body {
    uint64 channel = 1;
  }
}

message TransferPeerCloseRequest {
  bytes id = 1;
}

message TransferPeerCloseResponse {}

service TransferPeer {
  rpc Announce(TransferPeerAnnounceRequest) returns (TransferPeerAnnounceResponse);
  rpc Close(TransferPeerCloseRequest) returns (TransferPeerCloseResponse);
}
